--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
     "express": "^4.16.4",
-    "@nuxtjs/axios": "^5.3.6"
+    "nuxt": "^2.4.0",
+    "prettier": "^1.17.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
